--- a/Changes
+++ b/Changes
@@ -1,4 +1,7 @@
-0.05 Wed 30 Jun 2010 10:54:52 AM CEST  
+0.06 Tue 10 Aug 2010 10:18:59 AM CEST
+    - fix bug in links retriving (thanks to Al Tobey)
+
+0.05 Wed 30 Jun 2010 10:54:52 AM CEST
     - fix vlock
 
 0.04 Wed June 16 2010
