Import of RGE/Net-Riak-0.14 from CPAN.
gitpan-cpan-distribution: Net-Riak
gitpan-cpan-version:      0.14
gitpan-cpan-path:         RGE/Net-Riak-0.14.tar.gz
gitpan-cpan-author:       RGE
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,4 +1,7 @@
-0.13 (UNRELEASED)
+0.14 Mon Mar 14 08:59:10 GMT 2011
+	- fixed delete link (Simon Wistow)
+
+0.13 Tue, 08 Feb 2011 16:40:07 GMT
 	- Enviroment variable for riak when running tests (Robin Edwards)
 	- Connection caching (Andrew Sayers)
 	- Automatic key generation support (Simon Wistow)
