--- a/Changes
+++ b/Changes
@@ -1,11 +1,12 @@
-0.15 
-	- fixed link encoding (Simon Wistow)
-	- added stats method for REST
-	- added server_info method for PBC
-	- added list bucket support for both protocols (0.14+ for REST)
+0.15 Wed 20 Apr 2011 14:52:22 BST 
+    - fixed link encoding (Simon Wistow)
+    - added stats method for REST
+    - added server_info method for PBC
+    - added list bucket support for both protocols (0.14+ for REST)
     - added PBC support
-	- added Test::Riak for running tests on both protocols
+    - added Test::Riak for running tests on both protocols
     - added disable_return_body flag, in REST mode prevents body being returned on store
+    - create new object without keys (SymKat <symkat@symkat.com>) (REST only)
 
     DEPRECATIONS
     - $object->status please call $object->client->status (for REST only)
@@ -15,12 +16,12 @@
       all load balancing code to be moved out of Net::Riak by 0.17.
 
 0.14 Mon Mar 14 08:59:10 GMT 2011
-	- fixed delete link (Simon Wistow)
+    - fixed delete link (Simon Wistow)
 
 0.13 Tue, 08 Feb 2011 16:40:07 GMT
-	- Enviroment variable for riak when running tests (Robin Edwards)
-	- Connection caching (Andrew Sayers)
-	- Automatic key generation support (Simon Wistow)
+    - Enviroment variable for riak when running tests (Robin Edwards)
+    - Connection caching (Andrew Sayers)
+    - Automatic key generation support (Simon Wistow)
 
 0.12
     - fix _build_link method (reported by gphat)
