Import of RGE/Net-Riak-0.1501 from CPAN.
gitpan-cpan-distribution: Net-Riak
gitpan-cpan-version:      0.1501
gitpan-cpan-path:         RGE/Net-Riak-0.1501.tar.gz
gitpan-cpan-author:       RGE
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+0.1501 Thu May 19 12:07:51 BST 2011
+    - fix pod error in Net/Riak.pm
+    - fix GH-12 in Map/Reduce operations (franck cuny)
+
 0.15 Wed 20 Apr 2011 14:52:22 BST 
     - fixed link encoding (Simon Wistow)
     - added stats method for REST
