Import of RGE/Net-Riak-0.1600 from CPAN.
gitpan-cpan-distribution: Net-Riak
gitpan-cpan-version:      0.1600
gitpan-cpan-path:         RGE/Net-Riak-0.1600.tar.gz
gitpan-cpan-author:       RGE
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,3 +1,9 @@
+0.1600 Thu Mar 15 15:30:47 GMT 2012
+    - catch errors in reading sockets (Damien Krotkine)
+    - added Riak search (Germain Maurice)
+    - fixed package name (David Hull)
+    - various documentation updates
+
 0.1502 Thu Jun 23 15:39:10 BST 2011
     - added status line to REST response (Robin Edwards)
 
