--- a/Changes
+++ b/Changes
@@ -1,3 +1,5 @@
+0.1700 Mon 18 Feb 2013 13:06:57 GMT
+    - Add ssl support (Theo bot)
 0.1600 Thu Mar 15 15:30:47 GMT 2012
     - catch errors in reading sockets (Damien Krotkine)
     - added Riak search (Germain Maurice)
