--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+0.1701 Fri  1 Mar 2013 13:03:44 GMT
+    - Add support for secondary indexes (Theo bot)
+    - Remove deprecations for 0.17 release (Robin Edwards)
 0.1700 Mon 18 Feb 2013 13:06:57 GMT
     - Add ssl support (Theo bot)
 0.1600 Thu Mar 15 15:30:47 GMT 2012
