--- a/README
+++ b/README
@@ -2,7 +2,7 @@ NAME
     Net::Riak - Interface to Riak
 
 VERSION
-    version 0.1700
+    version 0.1701
 
 SYNOPSIS
         # REST interface
@@ -32,6 +32,23 @@ SYNOPSIS
             index => 'bucket_name',
             q     => 'field:value'
         );
+
+        # Secondary index setup (REST interface)
+        my $obj3 = $bucket->new_object('foo3', {...});
+        $obj3->add_index('myindex_bin','myvalue' );
+        $obj3->add_index('number_int', 1001);
+        $obj3->store;
+
+        # Get all keys for a specific index/value pair
+        my @keys = $client->index('mybucket', 'myindex_bin', 'myvalue' );
+
+        # Get all keys for a range of index value pairs
+        my @keys = $client->index('mybucket', 'number_int', 500, 1500);
+
+        # Removing a secondary index (REST interface)
+        my $new_obj = $bucket->get('foo3');
+        $new_obj->remove_index('number_int', 1001);
+        $new_obj->store;
 
 DESCRIPTION
   ATTRIBUTES
@@ -143,7 +160,7 @@ AUTHOR
     franck cuny <franck@lumberjaph.net>, robin edwards <robin.ge@gmail.com>
 
 COPYRIGHT AND LICENSE
-    This software is copyright (c) 2011 by linkfluence.
+    This software is copyright (c) 2013 by linkfluence.
 
     This is free software; you can redistribute it and/or modify it under
     the same terms as the Perl 5 programming language system itself.
