Import of RGE/Net-Riak-0.1702 from CPAN.
gitpan-cpan-distribution: Net-Riak
gitpan-cpan-version:      0.1702
gitpan-cpan-path:         RGE/Net-Riak-0.1702.tar.gz
gitpan-cpan-author:       RGE
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,3 +1,5 @@
+0.1702 Wed 20 Mar 2013 12:03:47 GMT
+    - Add support for object meta data (Adam Lounds)
 0.1701 Fri  1 Mar 2013 13:03:44 GMT
     - Add support for secondary indexes (Theo bot)
     - Remove deprecations for 0.17 release (Robin Edwards)
